--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -23,11 +23,13 @@
     <string name="import_identity_label">restore identity...</string>
     <string name="export_identity_label">backup identity...</string>
     <string name="delete_identity_user">delete identity: %s</string>
+    <string name="remove_identity_user">remove identity: %s</string>
     <string name="import_identities">restore identity...</string>
     <string name="create_identity_label">create new identity...</string>
     <string name="no_identity_exported">no identity backed up</string>
     <string name="no_identity_imported">no identity restored</string>
     <string name="no_identity_deleted">no identity deleted</string>
+    <string name="no_identity_removed">no identity removed</string>
     <string name="identity_imported_successfully">identity %s restored successfully</string>
     <string name="could_not_import_identity">could not restore identity</string>
     <string name="could_not_restore_identity_name">could not restore identity %s</string>
@@ -195,8 +197,8 @@
     <string name="could_not_delete_identity">could not delete identity</string>
     <string name="identity_deleted">identity deleted</string>
     <string name="delete_identity_from_device_progress">deleting identity from device</string>
-    <string name="could_not_delete_identity_from_device">could not delete identity from device</string>
-    <string name="identity_deleted_from_device">identity deleted from device</string>
+    <string name="could_not_remove_identity_from_device">could not remove identity from device</string>
+    <string name="identity_removed_from_device">identity removed from device</string>
     <string name="backup">backup</string>
     <string name="backup_identity">backup identity %s</string>
     <string name="backed_up_identity_to_path">backed up identity %1$s to %2$s</string>
@@ -228,7 +230,7 @@
     <string name="select_none">select none</string>
     <string name="select_all">select all</string>
     <string name="delete_identity_message_warning">Deleting an identity will erase all messages that identity has sent. It can not be undone.</string>
-    <string name="delete_identity_from_device_message_warning">Deleting an identity from a device will erase the identity from this device, but it will not remove the identity or sent messages from the server.</string>
+    <string name="delete_identity_from_device_message_warning">Removing an identity from a device will remove the identity from this device, but it will not delete the identity or sent messages from the server.</string>
     <string name="identity_colon">identity:</string>
     <string name="backup_location_note">Note: this may or may not be the removable SD card depending on your device.</string>
     <string name="generate_new_keypairs">Generate new private key pairs for the selected identity and revoke the current pair. Any other devices will no longer be able to access surespot using the selected identity.</string>
@@ -260,8 +262,8 @@
     <string name="pref_summary_message_debug_mode">Shows more information about messages for debugging purposes.</string>
     <string name="pref_title_delete_identity">delete identity...</string>
     <string name="delete_identity">delete identity</string>
-    <string name="pref_title_delete_identity_from_device">delete identity from device...</string>
-    <string name="delete_identity_from_device">delete identity from device</string>
+    <string name="pref_title_delete_identity_from_device">remove identity from device...</string>
+    <string name="delete_identity_from_device">remove identity from device</string>
     <string name="surespot_help">surespot help</string>
     <string name="backup_drive_button">Execute Google Drive Backup</string>
     <string name="could_not_backup_identity_to_google_drive">Could not backup identity to Google Drive</string>
