--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -253,6 +253,8 @@
     <string name="pref_title_message_debug_mode">message debug mode</string>
     <string name="pref_title_debug">debug</string>
     <string name="pref_title_options">identity options</string>
+    <string name="pref_title_enter_to_send">enter sends message</string>
+    <string name="pref_summary_enter_to_sent">pressing enter sends a message</string>
     <string name="pref_summary_delete_message">confirm before deleting a message</string>
     <string name="pref_summary_delete_all_messages">confirm before deleting all messages</string>
     <string name="pref_summary_export_identity">Backup your identity to Device Storage or Google Drive.</string>
