--- a/surespot/src/main/res/values-de/strings.xml
+++ b/surespot/src/main/res/values-de/strings.xml
@@ -293,24 +293,24 @@
   <string name="billing_unavailable_title">Abrechnung nicht verfügbar</string>
   <string name="billing_error">Abrechnungsfehler</string>
   <string name="pref_billing">Einkäufe</string>
-  <string name="suppress_voice_purchase">Nicht mehr danach fragen, die Sprachnachrichtenfunktion zu kaufen (Tab schließt sich stattdessen).</string>
-  <string name="voice_messaging_purchase_1"><![CDATA["Die Benutzung der Sprach-Nachricht mit surespot macht die verschlüsselte Kommunikation noch einfacher! Einfach die Mikrofontaste halten um eine Nachricht aufzunehmen. Beim Loslassen wird die Nachricht versendet. Manchmal ist es einfacher etwas zu sagen als den Text einzugeben. (<a href="http://youtu.be/3mifzH1DXDk">Video-Demonstration</a>)"]]></string>
-  <string name="voice_messaging_purchase_button">Bitte hier tippen um die Option für 1,99€ zu kaufen.</string>
-  <string name="voice_message_suppress_purchase_ask">Nicht mehr nachfragen</string>
-  <string name="pref_suppress_voice_purchase_ask_title">Nicht mehr nachfragen</string>
-  <string name="pref_suppress_voice_purchase_ask_summary">Bitte nicht mehr danach fragen die Sprachnachrichtenfunktion freizuschalten</string>
-  <string name="menu_purchase_voice_messaging">Sprachnachricht kaufen</string>
-  <string name="purchase_voice_title">Sprachnachrichtenfunktion kaufen</string>
-  <string name="voice_upgrade_required"><![CDATA["<a href="market://details?id=com.twofours.surespot">Bitte surespot aktualisieren, um diese Sprachnachricht anhören zu können.</a>"]]></string>
+  <!--<string name="suppress_voice_purchase">Nicht mehr danach fragen, die Sprachnachrichtenfunktion zu kaufen (Tab schließt sich stattdessen).</string>-->
+  <!--<string name="voice_messaging_purchase_1"><![CDATA["Die Benutzung der Sprach-Nachricht mit surespot macht die verschlüsselte Kommunikation noch einfacher! Einfach die Mikrofontaste halten um eine Nachricht aufzunehmen. Beim Loslassen wird die Nachricht versendet. Manchmal ist es einfacher etwas zu sagen als den Text einzugeben. (<a href="http://youtu.be/3mifzH1DXDk">Video-Demonstration</a>)"]]></string>-->
+  <!--<string name="voice_messaging_purchase_button">Bitte hier tippen um die Option für 1,99€ zu kaufen.</string>-->
+  <!--<string name="voice_message_suppress_purchase_ask">Nicht mehr nachfragen</string>-->
+  <!--<string name="pref_suppress_voice_purchase_ask_title">Nicht mehr nachfragen</string>-->
+  <!--<string name="pref_suppress_voice_purchase_ask_summary">Bitte nicht mehr danach fragen die Sprachnachrichtenfunktion freizuschalten</string>-->
+  <!--<string name="menu_purchase_voice_messaging">Sprachnachricht kaufen</string>-->
+  <!--<string name="purchase_voice_title">Sprachnachrichtenfunktion kaufen</string>-->
+  <!--<string name="voice_upgrade_required"><![CDATA["<a href="market://details?id=com.twofours.surespot">Bitte surespot aktualisieren, um diese Sprachnachricht anhören zu können.</a>"]]></string>-->
   <string name="user_exists_throttled">Zu viele Versuche, bitte später erneut versuchen.</string>
   <string name="user_exists_error">Fehler bei der Überprüfung des Benutzernamens</string>
   <string name="user_exists_progress">Benutzername wird überprüft</string>
   <string name="caching_service_notification_title">surespot</string>
   <string name="caching_service_notification_message">caching für maximale Leistung</string>
-  <string name="voice_help_1">Mikrofontaste gedrückt halten, um eine Sprachnachricht aufzunehmen. Beim Loslassen der Taste wird die Nachricht gesendet.</string>
-  <string name="voice_help_2">Der Aufnahmeknopf kann weggewischt werden um die Aufnahme abzubrechen. </string>
-  <string name="voice_help_3">Auf eine Sprachnachricht tippen um diese ab zu spielen. Erneutes Tippen zum stoppen.</string>
-  <string name="voice_help_4">Neue Sprachnachrichten werden automatisch im offenen Chat-Tab abgespielt.</string>
+  <!--<string name="voice_help_1">Mikrofontaste gedrückt halten, um eine Sprachnachricht aufzunehmen. Beim Loslassen der Taste wird die Nachricht gesendet.</string>-->
+  <!--<string name="voice_help_2">Der Aufnahmeknopf kann weggewischt werden um die Aufnahme abzubrechen. </string>-->
+  <!--<string name="voice_help_3">Auf eine Sprachnachricht tippen um diese ab zu spielen. Erneutes Tippen zum stoppen.</string>-->
+  <!--<string name="voice_help_4">Neue Sprachnachrichten werden automatisch im offenen Chat-Tab abgespielt.</string>-->
   <string name="close">schließen</string>
   <string name="no_audio_detected">Keine Tonaufnahme erkannt. Die Sprachmitteilung wird nicht gesendet.</string>
   <string name="pref_title_background_image_select">Hintergrundbild auswählen</string>
@@ -343,6 +343,4 @@
   <string name="notification_message_no_from">%s: Neue Nachricht empfangen.</string>
   <string name="notification_invite_no_from">%s: Kontaktanfrage erhalten.</string>
   <string name="notification_invite_accept_no_from">%s: Kontaktanfrage akzeptiert.</string>
-  <string name="whats_new_57_message">Neue Funktionen!\n\nPasswort im Schlüsselbund speichern.\n\nAlias für Kontakte (im Home-Tab lange auf den Kontakt drücken)\n\nVerbessere Verbindungsverwaltung.\n\nDanke für die Unterstützung durch eure spenden!</string>
-  <string name="whats_new_57_title">Version 58</string>
 </resources>
