--- a/surespot/src/main/res/values-de/strings.xml
+++ b/surespot/src/main/res/values-de/strings.xml
@@ -343,5 +343,5 @@
   <string name="notification_message_no_from">%s: Neue Nachricht empfangen.</string>
   <string name="notification_invite_no_from">%s: Kontaktanfrage erhalten.</string>
   <string name="notification_invite_accept_no_from">%s: Kontaktanfrage akzeptiert.</string>
-  <string name="decrypt_update">Bitte aktualisieren Sie Surespot zu entschlüsseln.</string>
+  <string name="decrypt_update"><![CDATA["<a href="market://details?id=com.twofours.surespot">Bitte aktualisieren Sie Surespot aus dem Google Play Store .</a>"]]></string>
 </resources>
