--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -359,7 +359,5 @@
     <string name="notification_message_no_from">%s: New message received.</string>
     <string name="notification_invite_no_from">%s: Friend invite received.</string>
     <string name="notification_invite_accept_no_from">%s: Friend invite accepted.</string>
-    <string name="whats_new_57_message">New features!\n\nSave password in keychain.\n\nFriend aliases (long press on friend name on home tab).\n\nImproved reconnect handling.\n\nThank you for funding this project through your donations!</string>
-    <string name="whats_new_57_title">Version 58</string>
-    <string name="decrypt_update">Please update surespot to decrypt.</string>
+    <string name="decrypt_update"><![CDATA["<a href="market://details?id=com.twofours.surespot">Please update surespot from the play store.</a>"]]></string>
 </resources>
