--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -162,6 +162,7 @@
     <string name="billing_bitcoin_email_body_qr">The QR code can be viewed here: %s</string>
     <string name="could_not_open_bitcoin_wallet">could not open bitcoin wallet</string>
     <string name="message_sending">sending...</string>
+    <string name="error_sending_message">error sending message</string>
     <string name="message_loading_and_decrypting">loading and decrypting...</string>
     <string name="could_not_login_to_server">could not log in to server</string>
     <string name="could_not_connect_to_server">could not connect to server</string>
@@ -176,6 +177,7 @@
     <string name="error_sending_messages">Error Sending Message(s)</string>
     <string name="error_sending_detail">Click to open Surespot and retry sending</string>
     <string name="prompt_resend_errored_messages">Resend errored message(s)?</string>
+    <string name="prompt_resend">Resend?</string>
     <string name="menu_lock">lock</string>
     <string name="menu_unlock">unlock</string>
     <string name="image_saved_to_gallery">image saved to gallery</string>
