--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -371,6 +371,6 @@
     <string name="notification_invite_accept_no_from">%s: Friend invite accepted.</string>
     <string name="pref_disable_voice_title">disable voice</string>
     <string name="pref_disable_voice">disable voice messaging</string>
-    <string name="need_storage_permission">surespot can not read identity backups from the device without Storage permission.</string>
-    <string name="enable_storage_permission">Please enable Storage permission for surespot under device application settings.</string>
+    <string name="need_storage_permission">surespot can not manage identities on the device without Storage permission.</string>
+    <string name="enable_storage_permission">Please enable Storage permission for surespot under device app permission settings.</string>
 </resources>
