--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="identity_imported_successfully">identity %s restored successfully</string>
     <string name="could_not_import_identity">could not restore identity</string>
     <string name="could_not_restore_identity_name">could not restore identity %s</string>
-    <string name="notifications_title">push notifications</string>
+    <string name="notifications_title">notifications</string>
     <string name="notifications_vibration">vibration</string>
     <string name="notifications_sound">sound</string>
     <string name="notifications_led">led</string>
@@ -373,4 +373,5 @@
     <string name="pref_disable_voice">disable voice messaging</string>
     <string name="need_storage_permission">surespot can not manage identities on the device without Storage permission.</string>
     <string name="enable_storage_permission">Please enable Storage permission for surespot under device app permission settings.</string>
+    <string name="black">black</string>
 </resources>
