--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -364,4 +364,5 @@
     <string name="enable_storage_permission">Please enable Storage permission for surespot under device app permission settings.</string>
     <string name="black">black</string>
     <string name="requires_force_stop">requires force stop or reboot to take effect</string>
+    <string name="unknown_message_mime_type">unknown message mime type</string>
 </resources>
