--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -365,4 +365,5 @@
     <string name="black">black</string>
     <string name="requires_force_stop">requires force stop or reboot to take effect</string>
     <string name="unknown_message_mime_type">unknown message mime type</string>
-</resources>
+    <string name="could_not_select_image">Could not select image</string>
+    <string name="did_not_send_x_images">surespot was unable to send %1$d of the %2$d selected images.</string></resources>
