--- a/surespot/src/main/res/values/strings.xml
+++ b/surespot/src/main/res/values/strings.xml
@@ -362,7 +362,7 @@
     <string name="pref_disable_voice">disable voice messaging</string>
     <string name="need_storage_permission">surespot can not manage identities on the device without Storage permission.</string>
     <string name="enable_storage_permission">Please enable Storage permission for surespot under device app permission settings.</string>
-    <string name="black">black</string>
+    <string name="black_theme">black theme</string>
     <string name="requires_force_stop">requires force stop or reboot to take effect</string>
     <string name="unknown_message_mime_type">unknown message mime type</string>
     <string name="could_not_select_image">Could not select image</string>
